--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
 /* TODO: Make it awesome */
+
+* {
+  color: black;
+  background-color: blanchedalmond;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12pt;
+}
+
+h1 {
+  font-size: 14pt;
+}
+
+#items {
+  background-color: white;
+}
+
+#quantity {
+  background-color: white;
+}
+
+#input-submit {
+  background-color: white;
+}
