--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@
 
 h1 {
   font-size: 14pt;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 #items {
@@ -16,9 +27,5 @@ h1 {
 }
 
 #quantity {
-  background-color: white;
-}
-
-#input-submit {
   background-color: white;
 }
