--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,46 @@
   background-color: blanchedalmond;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12pt;
-}
+};
 
 h1 {
   font-size: 14pt;
   font-family: Arial, Helvetica, sans-serif;
-}
+};
 
 a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-}
+};
 
 li {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-}
+};
 
 #items {
   background-color: white;
-}
+};
 
 #quantity {
   background-color: white;
+};
+
+img {
+  height: 250px;
+  width: 250px;
 }
+
+tr td {
+  color: blue;
+  border: 50px;
+  border-color: black;
+};
+
+tr {
+  height: 250px;
+};
+
+td {
+  width: 250px;
+};
